2009-12-04  Robby Stephenson  <robby@periapsis.org>

	* Added option for turning webcam off.

2009-11-30  Robby Stephenson  <robby@periapsis.org>

	* Enabled JavaScript for report dialog, incase a template wants to use it.
	* Fixed crashing bug for sorting during HTML export.
	* Fixed multiple selection in entry view (KDE #216122).

2009-11-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed IMDB search to find director and writers.
	* Fixed Polish ISBN formatting.
	* Released Tellico 2.1.1.

2009-11-17  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting in icon view.

2009-11-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that kept filters from being saved. BUG#214672.

2009-11-12  Robby Stephenson  <robby@periapsis.org>

	* Updated script for searching allocine.fr.

2009-11-11  Robby Stephenson  <robby@periapsis.org>

	* Changed webcam image preview to only appear when searching by ISBN or  UPC/EAN.

2009-11-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting when auto-formatting is on.

2009-11-06  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug related to some table values.
	* FIxed crashing bug related to column sorting. BUG#214661.

2009-11-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.1.

2009-10-31  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for loading ISBN list from file.

2009-10-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with the sort order not being saved.

2009-10-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that auto-formatting was not always applied.

2009-10-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed grouping to always show group for empty value.
	* Fixed crashing bug when filtering entry with empty title.
	* Fixed compilation for KDE < 4.2.
	* Fixed filtering bug when modifying entry value.

2009-10-10  Robby Stephenson  <robby@periapsis.org>

	* Added PAM/PRISM translator to SRU fetcher. 
